--- a/텍스트 통찰.ipynb
+++ b/텍스트 통찰.ipynb
@@ -10,34 +10,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting seaborn\n",
-      "  Downloading seaborn-0.12.2-py3-none-any.whl (293 kB)\n",
-      "     -------------------------------------- 293.3/293.3 KB 6.0 MB/s eta 0:00:00\n",
-      "Requirement already satisfied: numpy!=1.24.0,>=1.17 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from seaborn) (1.24.3)\n",
+      "Requirement already satisfied: seaborn in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (0.12.2)\n",
       "Requirement already satisfied: pandas>=0.25 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from seaborn) (2.0.2)\n",
+      "Requirement already satisfied: numpy!=1.24.0,>=1.17 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from seaborn) (1.24.3)\n",
       "Requirement already satisfied: matplotlib!=3.6.1,>=3.1 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from seaborn) (3.7.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\lg\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (2.8.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (0.11.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (9.5.0)\n",
       "Requirement already satisfied: importlib-resources>=3.2.0 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (5.12.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (1.4.4)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (0.11.0)\n",
       "Requirement already satisfied: packaging>=20.0 in c:\\users\\lg\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (23.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\lg\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (2.8.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (9.5.0)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (3.1.0)\n",
       "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (4.40.0)\n",
       "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (1.1.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (1.4.4)\n",
       "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas>=0.25->seaborn) (2023.3)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas>=0.25->seaborn) (2023.3)\n",
       "Requirement already satisfied: zipp>=3.1.0 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from importlib-resources>=3.2.0->matplotlib!=3.6.1,>=3.1->seaborn) (3.15.0)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\lg\\appdata\\roaming\\python\\python39\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.1->seaborn) (1.16.0)\n",
-      "Installing collected packages: seaborn\n",
-      "Successfully installed seaborn-0.12.2\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -56,7 +52,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting regex\n",
+      "  Downloading regex-2023.6.3-cp39-cp39-win_amd64.whl (268 kB)\n",
+      "     -------------------------------------- 268.1/268.1 KB 5.6 MB/s eta 0:00:00\n",
+      "Installing collected packages: regex\n",
+      "Successfully installed regex-2023.6.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 22.0.4; however, version 23.1.2 is available.\n",
+      "You should consider upgrading via the 'c:\\Users\\LG\\AppData\\Local\\Programs\\Python\\Python39\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install regex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting nltk\n",
+      "  Downloading nltk-3.8.1-py3-none-any.whl (1.5 MB)\n",
+      "     ---------------------------------------- 1.5/1.5 MB 19.2 MB/s eta 0:00:00\n",
+      "Collecting tqdm\n",
+      "  Downloading tqdm-4.65.0-py3-none-any.whl (77 kB)\n",
+      "     ---------------------------------------- 77.1/77.1 KB ? eta 0:00:00\n",
+      "Requirement already satisfied: joblib in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (1.2.0)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\lg\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (2023.6.3)\n",
+      "Collecting click\n",
+      "  Using cached click-8.1.3-py3-none-any.whl (96 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\lg\\appdata\\roaming\\python\\python39\\site-packages (from click->nltk) (0.4.6)\n",
+      "Installing collected packages: tqdm, click, nltk\n",
+      "Successfully installed click-8.1.3 nltk-3.8.1 tqdm-4.65.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  WARNING: The script tqdm.exe is installed in 'c:\\Users\\LG\\AppData\\Local\\Programs\\Python\\Python39\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "  WARNING: The script nltk.exe is installed in 'c:\\Users\\LG\\AppData\\Local\\Programs\\Python\\Python39\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "WARNING: You are using pip version 22.0.4; however, version 23.1.2 is available.\n",
+      "You should consider upgrading via the 'c:\\Users\\LG\\AppData\\Local\\Programs\\Python\\Python39\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +205,7 @@
        "4697  ﻿Please allow me\\nwarmly to congratulate you, Sir, on your assumption of\\nthe presidency of the fifty-sixth session of the General\\nAssembly.\\nThi...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +311,7 @@
        "length   72041.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +378,7 @@
        "speaker  7480   5428  Seyoum Mesfin   12"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +416,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +451,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +480,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -435,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +512,7 @@
        "<Axes: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -466,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +634,7 @@
        "<Axes: title={'center': 'Number of Countries'}, xlabel='year'>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -588,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +665,7 @@
        "<Axes: title={'center': 'Avg. Speech Length'}, xlabel='year'>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -615,6 +683,209 @@
    "source": [
     "df.groupby('year').agg({'length':'mean'}) \\\n",
     ".plot(title='Avg. Speech Length', ylim=(0,30000))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 전처리 파이프라인"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 정규 표현식을 이용한 토큰화\n",
+    "- POSIX문자 클래스 \\p{L} : 모든 유니코드 문자를 선택함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \\w에는 숫자, 영문자 및 밑줄 포함(영숫자 문자)\n",
+    "# 하나 이상의 문자와 영숫자 문자, 하이픈(-)으로 구성된 토큰과 일치시킴.\n",
+    "import regex as re\n",
+    "\n",
+    "def tokenize(text) : \n",
+    "    return re.findall(r'[\\w-]*\\p{L}[\\w-]*', text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let|s|defeat|SARS-CoV-2|together|in\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 말뭉치 샘플 문장\n",
+    "text = \"Let's defeat SARS-CoV-2 together in 2020!\"\n",
+    "tokens = tokenize(text)\n",
+    "print('|'.join(tokens))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 불용어 처리\n",
+    "- 빠른 조회를 위해 목록을 파이썬의 set()타입으로 변환함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\LG\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "\n",
+    "stopwords = set(nltk.corpus.stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 구현한 함수로 불용어 제거\n",
+    "# nltk목록에는 소문자 단어만 포함되므로 입력 토큰을 소문자로 변환함\n",
+    "def remove_stop(tokens) : \n",
+    "    return [t for t in tokens if t.lower() not in stopwords]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 불용어 추가 : |\n",
+    "# 불용어 제거 : -\n",
+    "include_stopwords = {'dear', 'regards', 'must', 'would', 'also'}\n",
+    "exclude_stopwords = {'against'}\n",
+    "\n",
+    "stopwords |= include_stopwords\n",
+    "stopwords -= exclude_stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 파이프라인 구현\n",
+    "# transform : 호출 가능한 함수의 포인터\n",
+    "pipeline = [str.lower, tokenize, remove_stop]\n",
+    "\n",
+    "def prepare(text, pipeline) : \n",
+    "    tokens = text\n",
+    "    for transform in pipeline : \n",
+    "        tokens = transform(tokens)\n",
+    "    return tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 고차 함수 활용\n",
+    "df['tokens'] = df['text'].apply(prepare, pipeline=pipeline)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 차후의 요약을 위해 토큰 목록의 길이를 포함한 열 추가\n",
+    "df['num_tokens'] = df['tokens'].map(len)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 단어 빈도 분석"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 파이썬 Counter 클래스를 이용한 단어 개수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'my': 3, 'cats': 2, 'She': 1, 'likes': 1, 'and': 1, 'like': 1, 'sofa': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "tokens = tokenize('She likes my cats and my cats like my sofa.')\n",
+    "\n",
+    "counter = Counter(tokens)\n",
+    "print(counter)"
    ]
   }
  ],
