--- a/스크래핑_데이터추출.ipynb
+++ b/스크래핑_데이터추출.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,10 @@
     "import urllib.robotparser\n",
     "import xmltodict\n",
     "import requests\n",
-    "import feedparser"
+    "import feedparser\n",
+    "import os\n",
+    "import requests\n",
+    "import re"
    ]
   },
   {
@@ -101,6 +104,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# robots.txt해석\n",
+    "rp = urllib.robotparser.RobotFileParser()\n",
+    "rp.set_url('https://www.reuters.com/robots.txt')\n",
+    "rp.read()\n",
+    "rp.can_fetch('*', 'https://www.reuters.com/sitemap.xml')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -116,11 +143,7 @@
     }
    ],
    "source": [
-    "# robots.txt해석\n",
-    "rp = urllib.robotparser.RobotFileParser()\n",
-    "rp.set_url('https://www.reuters.com/robots.txt')\n",
-    "rp.read()\n",
-    "rp.can_fetch('*', 'https://www.reuters.com/sitemap.xml')"
+    "rp.can_fetch('*', 'https:/www.reuters.com/arc/outboundfeeds/news-sitemap/?outputType=xml')"
    ]
   },
   {
@@ -131,30 +154,10 @@
     {
      "data": {
       "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rp.can_fetch('*', 'https:/www.reuters.com/arc/outboundfeeds/news-sitemap/?outputType=xml')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.reuters.com/markets/europe/european-shares-climb-china-stimulus-hopes-inflation-data-focus-2023-06-30/\n",
-      "https://www.reuters.com/sports/baseball/streaking-phillies-return-home-oppose-rising-nationals-2023-06-30/\n",
-      "https://www.reuters.com/markets/currencies/rouble-sinks-over-15-month-low-vs-dollar-political-risk-concerns-2023-06-30/\n"
+      "https://www.reuters.com/sports/baseball/ryne-nelson-diamondbacks-handle-angels-2023-07-02/\n",
+      "https://www.reuters.com/sports/soccer/former-man-utd-midfielder-cleverley-announces-retirement-2023-07-02/\n",
+      "https://www.reuters.com/world/americas/guatemala-court-orders-presidential-ballot-review-opposition-cries-foul-2023-07-02/\n"
      ]
     }
    ],
@@ -214,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +275,7 @@
        "  'http://feeds.reuters.com/~r/Reuters/worldNews/~3/nOWjc9tZhig/coronavirus-hitting-the-americas-hardest-says-world-health-organization-idUSKBN23J2K3')]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +314,7 @@
        " 'https://www.reuters.com/article/us-health-coronavirus-who/coronavirus-hitting-the-americas-hardest-says-world-health-organization-idUSKBN23J2K3?feedType=RSS&feedName=worldNews']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,35 +342,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "File \u001b[1;32m<timed exec>:8\u001b[0m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 15.6 ms\n",
+      "Wall time: 4.95 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "output_directory = './data/'\n",
     "s = requests.Session()\n",
     "for url in urls[0:10] : \n",
     "    # URL의 마지막/뒤 부분을 가져와서 파일 이름으로 사용한다.\n",
     "    file = url.split(\"/\")[-1]\n",
+    "    # file_path = os.path.join(output_directory, file)\n",
     "    \n",
     "    r = s.get(url)\n",
     "    if r.ok : \n",
-    "        with open(file, 'w+b') as f : \n",
+    "        with open('./file', 'w+b') as f : \n",
     "            f.write(r.text.encode('utf-8'))\n",
     "    else : \n",
     "        print('error with URL %s' % url)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### wget를 사용한 HTML 페이지 다운로드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('urls.txt', 'w+b') as f : \n",
+    "    f.write('\\n'.join(urls).encode('utf-8'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 반정형 데이터 추출"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 정규 표현식을 사용한 추출"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://www.reuters.com/article/us-health-vaping-marijuana-idUSKBN1WG4KT'\n",
+    "\n",
+    "# 마지막 / 뒤의 부분을 파일 이름으로 사용하기\n",
+    "file = url.split('/')[-1] + '.html'\n",
+    "r = requests.get(url)\n",
+    "with open(file, 'w+b') as f : \n",
+    "    f.write(r.text.encode('utf-8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banned in Boston: Without vaping, medical marijuana patients must adapt | Reuters\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(file, \"r\", encoding='utf-8') as f:\n",
+    "    html = f.read()\n",
+    "    g = re.search(r'<title>(.*)</title>', html, re.MULTILINE|re.DOTALL)\n",
+    "    if g:\n",
+    "        print(g.groups()[0])"
    ]
   }
  ],
