--- a/텍스트데이터준비.ipynb
+++ b/텍스트데이터준비.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -16,38 +16,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR: Could not find a version that satisfies the requirement blueprints (from versions: none)\n",
-      "ERROR: No matching distribution found for blueprints\n"
+      "ERROR: Could not find a version that satisfies the requirement blueprints.exploration (from versions: none)\n",
+      "ERROR: No matching distribution found for blueprints.exploration\n"
      ]
     }
    ],
    "source": [
-    "pip install blueprints"
+    "pip install blueprints.exploration "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ConfigParser'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[56], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msqlite3\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mre\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mblueprint\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mexploration\u001b[39;00m \u001b[39mimport\u001b[39;00m count_words\n",
-      "File \u001b[1;32mc:\\Users\\LG\\anaconda3\\lib\\site-packages\\blueprint\\__init__.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mConfigParser\u001b[39;00m \u001b[39mimport\u001b[39;00m ConfigParser\n\u001b[0;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcollections\u001b[39;00m \u001b[39mimport\u001b[39;00m defaultdict\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcopy\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'ConfigParser'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import pandas as pd\n",
     "import sqlite3\n",
-    "import re"
+    "import re\n",
+    "from collections import Counter\n",
+    "from tqdm import tqdm\n",
+    "tqdm.pandas()\n",
+    "import html"
    ]
   },
   {
@@ -59,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +82,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 1962559722604916573\n",
+      "incarnation: 12426198390806612010\n",
       "xla_global_id: -1\n",
       ", name: \"/device:GPU:0\"\n",
       "device_type: \"GPU\"\n",
@@ -101,7 +92,7 @@
       "  links {\n",
       "  }\n",
       "}\n",
-      "incarnation: 7691565098033086053\n",
+      "incarnation: 4514488689174884374\n",
       "physical_device_desc: \"device: 0, name: NVIDIA GeForce GTX 1650 Ti, pci bus id: 0000:01:00.0, compute capability: 7.5\"\n",
       "xla_global_id: 416903419\n",
       "]\n"
@@ -123,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +249,7 @@
        "4        chevrolet        NaN     True                  NaN  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +302,7 @@
        "Name: in_data, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +459,7 @@
        "4  Hi, new to this subreddit.  I'm considering bu...    autos  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +541,7 @@
        "category                                                                                                 autos"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +728,7 @@
        "2730   0.139130  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,13 +742,139 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### count_words 구현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_words(df, column='tokens', preprocess=None, min_freq=2) : \n",
+    "    # 토큰 처리 및 counter 업데이트\n",
+    "    def update(doc) : \n",
+    "        tokens = doc if preprocess is None else preprocess(doc)\n",
+    "        counter.update(tokens)\n",
+    "\n",
+    "    # counter생성 및 모든 데이터에서 적용\n",
+    "    counter = Counter()\n",
+    "    df[column].progress_map(update)\n",
+    "\n",
+    "    # counter를 데이터프레임으로 전달(transform)\n",
+    "    freq_df = pd.DataFrame.from_dict(counter, orient='index', columns=['freq'])\n",
+    "    freq_df = freq_df.query('freq >= @min_freq')\n",
+    "    freq_df.index.name = 'token'\n",
+    "    return freq_df.sort_values('freq', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/20000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20000/20000 [00:00<00:00, 75196.45it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>freq</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>token</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;lb&gt;</th>\n",
+       "      <td>100729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>&lt;tab&gt;</th>\n",
+       "      <td>642</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         freq\n",
+       "token        \n",
+       "<lb>   100729\n",
+       "<tab>     642"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 정규 표현식으로 다른 태그가 있는지 확인하기\n",
+    "# <[\\w/]*> : HTML과 유사한 구문 찾기(알파벳, 숫자, 밑줄 또는 \\(슬래시)중 하나 찾기)\n",
+    "count_words(df, column='text', preprocess=lambda t: re.findall(r'<[\\w/]*>', t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 정규 표현식으로 노이즈 제거"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 정규 표현식으로 다른 태그가 있는지 확인하기\n",
-    "# <[\\w/]*> : HTML과 유사한 구문 찾기\n"
+    "def clean(text) : \n",
+    "    # &amp와 같은 html 이스케이프를 문자로 변환한다.\n",
+    "    text = html.unescape(text)\n",
+    "    # <tap>과 같은 태그를 공백으로 변환하기\n",
+    "    text = re.sub(r'<[^<>]*>', ' ', text)\n",
+    "    # [Some text](https://...)와 같은 마크다운 URL을 공백으로 변환한다.\n",
+    "    # r'\\1 : 첫 번째 그룹에 일치하는 내용 반환\n",
+    "    text = re.sub(r'\\[([^\\[\\]]*)\\]\\([^\\(\\)]*\\)', r'\\1', text)\n",
+    "    # [0]과 같은 괄호 안의 텍스트 또는 코드를 공백으로 변환한다.\n",
+    "    text = re.sub(r'\\[[^\\[\\]]*\\]', ' ', text)\n",
+    "    # 특수 문자로만 구성된 문자열을 공백으로 변환한다. \n",
+    "    # &#은 변환되지만 #cool은 변환되지 않음.\n",
+    "    "
    ]
   }
  ],
